--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">hw1</string>
+    <string name="sex">性別</string>
+    <string name="inputsex">(輸入性別)</string>
+    <string name="age">年齡</string>
+    <string name="inputage">(輸入年齡)</string>
+    <string name="ok">確定</string>
 </resources>
