1st homework for app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="inputage">(輸入年齡)</string>
     <string name="ok">確定</string>
     <string name="txtR">建議:</string>
+    <string name="sug_not_hurry">not hurry</string>
+    <string name="sug_get_married">get marry</string>
+    <string name="sug_find_couple">find couple</string>
+    <string name="sex_male">male</string>
 </resources>
