1st homework for app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="sug_get_married">get marry</string>
     <string name="sug_find_couple">find couple</string>
     <string name="sex_male">male</string>
+    <string name="male">男</string>
 </resources>
