--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">hw1</string>
+    <string name="app_name">hw1_婚姻建議</string>
     <string name="sex">性別</string>
     <string name="inputsex">(輸入性別)</string>
     <string name="age">年齡</string>
