--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
-    <string name="app_name">hw1_婚姻建議</string>
-    <string name="sex">性別</string>
-    <string name="inputsex">(輸入性別)</string>
-    <string name="age">年齡</string>
-    <string name="inputage">(輸入年齡)</string>
-    <string name="ok">確定</string>
-    <string name="txtR">建議:</string>
+    <string name="app_name">hw#2:黃禎安</string>
+    <string name="sex">sex</string>
+    <string name="inputsex">(input sex)</string>
+    <string name="age">age</string>
+    <string name="inputage">(input age)</string>
+    <string name="ok">ok</string>
+    <string name="txtR">suggestion:</string>
     <string name="sug_not_hurry">not hurry</string>
     <string name="sug_get_married">get marry</string>
     <string name="sug_find_couple">find couple</string>
     <string name="sex_male">male</string>
-    <string name="male">男</string>
+    <string name="sex_female">female</string>
 </resources>
